fix alignment for mobile

--- a/style.css
+++ b/style.css
@@ -420,11 +420,6 @@ Mobile
     width: 37vw;
     font-size: 10px;
   }
-
-  .next-contact {
-    margin-top: -350px;
-  }
-
 }
 
 
